scripts/fixtures/keep-check/pass/BlockCommentedDeclaration.java
package com.revenuecat.fixtures;

import androidx.annotation.Keep;

/*
public class InsideBlockComment {
}
*/

@Keep
public class BlockCommentedDeclaration {
}
