scripts/fixtures/keep-check/fail/JavaPublicMissingKeep.java
package com.revenuecat.fixtures;

// Expected flagged: JavaPublicMissingKeep
public class JavaPublicMissingKeep {
}
